# Breakout

./: .clang-format  CMakeLists.txt  README.md  build.sh
src/: game.c  game.h  platform.c  renderer.c  renderer.h  utils.h
